# Draft-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/3d/: SceneView3d.cpp  SceneView3d.h
src/ai/: server.py  vectorize.py
src/canvas/: DrawingCanvas.cpp  DrawingCanvas.h
src/dim/: AnchorPoint.h  LinearDimItem.cpp  LinearDimItem.h
src/ui/: MainWindow.cpp  MainWindow.h  RulerWidget.cpp  RulerWidget.h
src/undo/: Commands.cpp  Commands.h
